2020-06-17  Ryan Haddad  <ryanhaddad@apple.com>

        REGRESSION (r263098): [Win10] http/tests/security/cross-origin-clean-css-resource-timing.html and http/tests/security/cross-origin-css-resource-timing.html are failing
        https://bugs.webkit.org/show_bug.cgi?id=213303

        Unreviewed test gardening.

        * platform/win/TestExpectations: Mark tests as failing.

2020-06-17  Zalan Bujtas  <zalan@apple.com>

        [Win] Unreviewed test gardening.

        * platform/win/TestExpectations:

2020-06-17  Sam Weinig  <weinig@apple.com>

        [WPT] infrastructure/assumptions/html-elements.html fails due to changes in style when all: initial is used
        https://bugs.webkit.org/show_bug.cgi?id=213171

        Reviewed by Antti Koivisto.

        * platform/ios/imported/w3c/web-platform-tests/css/css-cascade/all-prop-initial-xml-expected.txt:
        Update test results.

2020-06-17  Antoine Quint  <graouts@webkit.org>

        [Modern Media Controls] CSS "cursor" property shoud be respected in media controls shadow root
        https://bugs.webkit.org/show_bug.cgi?id=213295
        <rdar://problem/61911638>

        Reviewed by Timothy Hatcher.

        Add a test that checks that setting the "cursor" property on a <video> element also applies to the
        media controls in the element's shadow root.

        * media/modern-media-controls/css/cursor-expected.txt: Added.
        * media/modern-media-controls/css/cursor.html: Added.

2020-06-08  Andy Estes  <aestes@apple.com>

        [Apple Pay] Enable layout tests on more platforms
        https://bugs.webkit.org/show_bug.cgi?id=212955
        <rdar://problem/64174156>

        Reviewed by Alex Christensen.

        * http/tests/ssl/applepay/ApplePayInstallmentItems.https.html: Changed to fail instead of
        time out when API version 9 isn't supported.

        * http/tests/ssl/applepay/ApplePayError.html:
        * http/tests/ssl/applepay/ApplePaySession.html: