@@ -1,3 +1,13 @@
+2020-06-17  Keith Miller  <keith_miller@apple.com>
+
+        WebKitTestRunner should not crash on alert with invalid utf16 strings
+        https://bugs.webkit.org/show_bug.cgi?id=213269
+
+        Reviewed by Simon Fraser.
+
+        * WebKitTestRunner/StringFunctions.h:
+        (WTR::toWTFString):
+
 2020-06-17  Aakash Jain  <aakash_jain@apple.com>
 
         Delete old ews client side code - part 2
